--- a/.github/workflows/jules_autonomous.yml
+++ b/.github/workflows/jules_autonomous.yml
@@ -1,52 +1,43 @@
 ﻿name: Jules Autonomous Agent
-
 on:
-  workflow_dispatch:      # Manual trigger button
+  workflow_dispatch:
   push:
     paths:
-      - 'BACKLOG.md'      # The "Loop" trigger
+      - 'BACKLOG.md'
   schedule:
-    - cron: '0 */6 * * *' # Fallback trigger
+    - cron: '0 */6 * * *'
 
 jobs:
   jules-work:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
-      with:
-        token: ${{ secrets.MY_PAT_TOKEN }} # Required for recursive runs
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
-
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install requests gitpython
-
-    - name: Configure Git
-      run: |
-        git config --global user.name "jules-bot"
-        git config --global user.email "jules@tytax-elite.ai"
-
-    - name: Run Agent Jules
-      id: jules_run
-      continue-on-error: true  # <--- CRITICAL: Keeps the job alive even if Jules fails code
-      env:
-        GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-        RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
-      run: python jules.py
-
-    - name: Finalize and Loop
-      if: always()             # <--- CRITICAL: Runs even if Jules crashed/failed
-      run: |
-        # This checks if Jules made any changes (like marking a task as failed or done)
-        # If there are changes, it pushes them, which triggers the NEXT run.
-        git add .
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Jules: Cycle complete (Success or Failure logged)" && git push origin main)
+      - name: Checkout Code
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.MY_PAT_TOKEN }}
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests gitpython
+      - name: Configure Git
+        run: |
+          git config --global user.name "jules-bot"
+          git config --global user.email "jules@tytax-elite.ai"
+      - name: Run Agent Jules
+        id: jules_run
+        continue-on-error: true
+        env:
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
+        run: python jules.py
+      - name: Finalize and Loop
+        if: always()
+        run: |
+          git add .
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Jules: Cycle complete (Fail-Safe Loop)" && git push origin main)
