--- a/.github/workflows/jules_autonomous.yml
+++ b/.github/workflows/jules_autonomous.yml
@@ -1,43 +1,59 @@
 ﻿name: Jules Autonomous Agent
+
+# --- SAFETY LOCK: Prevents simultaneous runs from corrupting files ---
+concurrency:
+  group: jules-agent-loop
+  cancel-in-progress: false 
+
 on:
-  workflow_dispatch:
+  workflow_dispatch:      # Manual trigger button
   push:
     paths:
-      - 'BACKLOG.md'
+      - 'BACKLOG.md'      # The "Loop" trigger
   schedule:
-    - cron: '0 */6 * * *'
+    - cron: '0 */6 * * *' # Fallback trigger
 
 jobs:
   jules-work:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.MY_PAT_TOKEN }}
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests gitpython
-      - name: Configure Git
-        run: |
-          git config --global user.name "jules-bot"
-          git config --global user.email "jules@tytax-elite.ai"
-      - name: Run Agent Jules
-        id: jules_run
-        continue-on-error: true
-        env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
-        run: python jules.py
-      - name: Finalize and Loop
-        if: always()
-        run: |
-          git add .
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Jules: Cycle complete (Fail-Safe Loop)" && git push origin main)
+    - name: Checkout Code
+      uses: actions/checkout@v4
+      with:
+        # Uses your PAT to allow recursive pushes to trigger the next run
+        token: ${{ secrets.MY_PAT_TOKEN }} 
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests gitpython
+
+    - name: Configure Git
+      run: |
+        git config --global user.name "jules-bot"
+        git config --global user.email "jules@tytax-elite.ai"
+
+    - name: Run Agent Jules
+      id: jules_run
+      continue-on-error: true  # Prevents job failure from stopping the finalize step
+      env:
+        GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+        RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
+      run: python jules.py
+
+    - name: Finalize and Loop
+      if: always()             # Runs even if Jules fails to find a code patch
+      run: |
+        # Pull latest in case a manual edit happened during the run
+        git pull origin main --rebase
+        git add .
+        # Only commit and push if changes were actually made
+        git diff --quiet && git diff --staged --quiet || (git commit -m "Jules: Cycle complete (Concurrency Protected)" && git push origin main)
